src/objects/sma__MATerritory__c.object
<CustomObject>
    <fields>
        <fullName>sma__CustomGeometry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Geometry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>sma__Folder__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Folder</label>
        <referenceTo>sma__MAFolder__c</referenceTo>
        <relationshipLabel>MapAnything Territories</relationshipLabel>
        <relationshipName>MapAnythingTerritories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__Options__c</fullName>
        <label>Options</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sma__Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Territory</label>
        <referenceTo>sma__MATerritory__c</referenceTo>
        <relationshipLabel>Territories</relationshipLabel>
        <relationshipName>Territories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MapAnythingTerritories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>MapAnything Territory</label>
    <listViews>
        <fullName>sma__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>